--- a/web/package.json
+++ b/web/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "moku",
-  "version": "0.64.3",
+  "name": "the-companion",
+  "version": "0.69.0",
   "type": "module",
   "description": "Web UI for launching and interacting with Claude Code agents",
   "license": "MIT",
-  "author": "Moku",
+  "author": "The Vibe Company",
   "bin": {
-    "moku": "./bin/cli.ts"
+    "the-companion": "./bin/cli.ts",
+    "companion": "./bin/cli.ts"
   },
   "files": [
     "bin/",
@@ -39,7 +40,6 @@
     "generate-token": "bun bin/generate-token.ts"
   },
   "dependencies": {
-    "@base-ui/react": "^1.2.0",
     "@codemirror/lang-cpp": "^6.0.3",
     "@codemirror/lang-css": "^6.3.1",
     "@codemirror/lang-html": "^6.4.11",
@@ -53,27 +53,13 @@
     "@codemirror/lang-xml": "^6.1.0",
     "@codemirror/lang-yaml": "^6.1.2",
     "@codemirror/view": "^6.39.15",
-    "@fontsource-variable/inter": "^5.2.8",
-    "@radix-ui/react-use-controllable-state": "^1.2.2",
     "@uiw/react-codemirror": "^4.25.4",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
     "croner": "^10.0.1",
     "diff": "^8.0.3",
     "fzf": "^0.5.2",
     "hono": "^4.7.0",
-    "lucide-react": "^0.575.0",
-    "motion": "^12.34.3",
     "posthog-js": "^1.347.2",
     "qrcode": "^1.5.4",
-    "shiki": "^4.0.0",
-    "sonner": "^2.0.7",
-    "streamdown": "^2.3.0",
-    "tailwind-merge": "^3.5.0",
-    "tw-animate-css": "^1.4.0",
-    "use-stick-to-bottom": "^1.1.3",
-    "vaul": "^1.1.2",
     "ws": "^8.19.0"
   },
   "devDependencies": {
